# zkllvm-circifier

./: .gitignore  .gitmodules  Makefile  flake.nix
.github/workflows/: evm-compiler-push.yml  handle-syncwith.yml  pull.yml  push.yml
clang/: CMakeLists.txt
clang/lib/AST/: APValue.cpp  ASTContext.cpp  ASTImporter.cpp  CMakeLists.txt  DeclCXX.cpp  DeclTemplate.cpp  Expr.cpp  ExprConstant.cpp  ItaniumMangle.cpp  MicrosoftMangle.cpp  NSAPI.cpp  PrintfFormatString.cpp  RecordLayoutBuilder.cpp  StmtPrinter.cpp  Type.cpp  TypeLoc.cpp
clang/lib/Basic/: CMakeLists.txt  LangOptions.cpp  TargetInfo.cpp  Targets.cpp  Version.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGAtomic.cpp  CGBlocks.cpp  CGBuilder.h  CGBuiltin.cpp  CGCXXABI.cpp  CGCall.cpp  CGClass.cpp  CGCleanup.cpp  CGCoroutine.cpp  CGDebugInfo.cpp  CGDecl.cpp  CGDeclCXX.cpp  CGEvm.cpp  CGException.cpp  CGExpr.cpp  CGExprAgg.cpp  CGExprCXX.cpp  CGExprConstant.cpp  CGExprScalar.cpp  CGGPUBuiltin.cpp  CGLoopInfo.cpp  CGNonTrivialStruct.cpp  CGObjC.cpp  CGObjCGNU.cpp  CGObjCMac.cpp  CGObjCRuntime.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntimeGPU.cpp  CGRecordLayout.h  CGRecordLayoutBuilder.cpp  CGStmt.cpp  CGStmtOpenMP.cpp  CGVTT.cpp  CGVTables.cpp  CMakeLists.txt  CodeGenAction.cpp  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  (+10 more)
clang/lib/Driver/: CMakeLists.txt  Driver.cpp  ToolChain.cpp  Types.cpp
clang/lib/Frontend/: CMakeLists.txt  CompilerInvocation.cpp  FrontendActions.cpp  FrontendOptions.cpp  InitPreprocessor.cpp  TVMImportJsonAbi.cpp
clang/lib/FrontendTool/: ExecuteCompilerInvocation.cpp
clang/lib/Headers/: stdint.h
clang/lib/Index/: USRGeneration.cpp
clang/lib/Lex/: LiteralSupport.cpp
clang/lib/Parse/: ParseDecl.cpp  ParsePragma.cpp  ParseStmt.cpp
clang/lib/Sema/: CMakeLists.txt  Sema.cpp  SemaCast.cpp  SemaChecking.cpp  SemaCoroutine.cpp  SemaDecl.cpp  SemaDeclAttr.cpp  SemaDeclCXX.cpp  SemaExpr.cpp  SemaInit.cpp  SemaLookup.cpp  SemaOverload.cpp  SemaStmtAttr.cpp  SemaTemplate.cpp  SemaTemplateInstantiateDecl.cpp  SemaType.cpp
clang/lib/Serialization/: ASTCommon.cpp  (+2 more)
cmake/Cache/: ton-compiler-alone.cmake
docs/: installtools.md
libc/include/: wctype.h
libc/zk/: malloc.c
libcpp/: __config  type_traits  utility
llvm/: .gitignore  CMakeLists.txt  flake.nix
llvm/cmake/: config-ix.cmake
llvm/docs/: LoopTerminology.rst  MemorySSA.rst  SourceLevelDebugging.rst
llvm/lib/: CMakeLists.txt
llvm/projects/: CMakeLists.txt
llvm/projects/evm-sdk/cpp-stdlib/libc/: CMakeLists.txt
llvm/projects/evm-sdk/cpp-stdlib/libc/include/: _stdlib.h  ctype.h  errno.h  locale.h  math.h  stdint.h  stdio.h  stdlib.h  wchar.h
llvm/projects/evm-sdk/cpp-stdlib/libc/libc/stdio/: vfprintf.c
llvm/projects/evm-sdk/cpp-stdlib/libc/libc/time/: mktime.c
llvm/projects/evm-sdk/cpp-stdlib/libc/zk/: strlen.c
llvm/projects/evm-sdk/evm-stdlib/: CMakeLists.txt  builtins.cpp  stdlib.s
llvm/projects/evm-sdk/evm-stdlib/include/: evm_sdk.h  storage.h  storage_base.h  storage_config.h
llvm/test/: CMakeLists.txt
llvm/tools/: CMakeLists.txt
llvm/tools/evm-linker/: .clang-format  CMakeLists.txt  evm_builder.cpp  evm_builder.h  evm_common.h  evm_file.cpp  evm_file.h  evm_inst.h  evm_linker.cpp  evm_linker.h  evm_opcodes.h  evm_symbols.h  main.cpp  readme.md
llvm/utils/: create_package_evm.sh
packaging/: control  make_deb.sh
(+1115 files in other folders)
